Adding code so links open in new tabs

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -213,7 +213,7 @@
           <div class="row">
             <div class="col-sm-12">
               <br>
-              <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/">Compose.ly<a/>, and created the story maps with <a href="https://cardboardit.com/">Cardboard</a>.</p>
+              <p>I created some personas and story maps to help further understand the details an emergency system like this would need. I drew inspiration for the persona design from <a href="https://compose.ly/strategy/user-persona-guide/" target="_blank">Compose.ly<a/>, and created the story maps with <a href="https://cardboardit.com/" target="_blank">Cardboard</a>.</p>
               <br>
             </div>
           </div>
@@ -273,9 +273,9 @@
             <div class="col-sm-12">
               <p>Links to demos of a paper and mid-fidelity prototype are below.</p>
               <br>
-              <a href="https://youtu.be/E_Wjl02KlPY">Paper Prototype</a><br>
-              <a href="https://youtu.be/kfK_NslRQ0A">Mid-Fidelity Prototype</a><br>
-              <a href="https://youtu.be/XBtnex3qL28">Final Prototype Demo</a><br>
+              <a href="https://youtu.be/E_Wjl02KlPY" target="_blank">Paper Prototype</a><br>
+              <a href="https://youtu.be/kfK_NslRQ0A" target="_blank">Mid-Fidelity Prototype</a><br>
+              <a href="https://youtu.be/XBtnex3qL28" target="_blank">Final Prototype Demo</a><br>
               <br>
             </div>
           </div>
@@ -305,9 +305,9 @@
         <h5>Feel free to reach out if you want to connect or just say hi!</h5>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="https://github.com/jbhammon" class="fa fa-github"></a>
-          <a href="https://medium.com/@malts18" class="fa fa-medium"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github"></a>
+          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin"></a>
         </div>
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
