--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-sm-12">
             <p>I've been using the same app to track my strength training workouts for almost two years, but I realized it lets me export my data to a .csv file! I thought I'd try using R to visualize some trends in my workouts, and to help keep me motivated and pushing for progress each month.<br><br>
-            Check out the code <a href="https://github.com/jbhammon/Workout-Visualizations">here</a> on Github.<br><br>
+            Check out the code <a href="https://github.com/jbhammon/Workout-Visualizations"  target="_blank">here</a> on Github.<br><br>
             I just started a new benching routine, so I thought that data would be a good place to start practicing with the ggplot() function. It's a three day per week routine, and I do fewer reps with higher weight as the week goes on. First it's sets at 70% of my "one-rep max" on Monday, then 75% on Wednesday, and 80% on Fridays.
             </p>
             <img src="../assets/Exercise Visualizations/Benching Line Graphs.png" style="width:100%; height:auto">
@@ -119,7 +119,7 @@
             <p>I'm also making some Sankey diagrams to visualize how much weight I'm lifting with each area of my body. Here's the first proof-of-concept version I created:
             </p>
             <img src="../assets/Exercise Visualizations/sankeyNetwork.png" style="width:100%; height:auto">
-            <p>This is the diagram with all the data included (interactive version <a href="SankeyDiagram.html">here</a>):
+            <p>This is the diagram with all the data included (interactive version <a href="SankeyDiagram.html" target="_blank">here</a>):
             </p>
             <img src="../assets/Exercise Visualizations/sankeyNetwork v2.png" style="width:100%; height:auto">
             <p>It's a cool diagram, but not very pretty! Next steps are to see what control I have over fonts, colors, etc. being used to present the information more clearly.</p>
@@ -135,9 +135,9 @@
         <h5>Feel free to reach out if you want to connect or just say hi!</h5>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="https://github.com/jbhammon" class="fa fa-github"></a>
-          <a href="https://medium.com/@malts18" class="fa fa-medium"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github"></a>
+          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin"></a>
         </div>
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
