--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-sm-12">
             <p>
-              The <a href="https://mi.spacegrant.org/">Michigan Space Grant Consortium (MSGC)</a> is part of a nationwide network of academics who help distribute funding from NASA to undergraduate and graduate students, as well as new faculty members just starting their own research.
+              The <a href="https://mi.spacegrant.org/" target="_blank">Michigan Space Grant Consortium (MSGC)</a> is part of a nationwide network of academics who help distribute funding from NASA to undergraduate and graduate students, as well as new faculty members just starting their own research.
               <br>
               Our project group partnered with them to create recommendations to improve the program. MSGC leadership included a mention of our project team in their recent report to NASA, and is eagerly waiting to hear our proposals and report them to NASA as well.
               <br>
@@ -159,9 +159,9 @@
         <h5>Feel free to reach out if you want to connect or just say hi!</h5>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
         <div class="social-links">
-          <a href="https://github.com/jbhammon" class="fa fa-github"></a>
-          <a href="https://medium.com/@malts18" class="fa fa-medium"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" class="fa fa-linkedin"></a>
+          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github"></a>
+          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium"></a>
+          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin"></a>
         </div>
         <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
