Made my name a link to about me page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
         <div class = "container">
           <h1 id='heroTextFirst'>Hi there!</h1>
-          <h1 id='heroTextSecond'>I'm <span class="underline--magical">Jackson Hammond</span>,</h1>
+          <h1 id='heroTextSecond'>I'm <a href="About.html" style="color: #313131;"><span class="underline--magical">Jackson Hammond</span></a>,</h1>
           <h1 id='heroTextThird'>product designer and lover of data.</h1>
         </div>
       </div>
