Added timeframes to each project page

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -66,9 +66,10 @@
           <div class = "row d-flex justify-content-center text-center">
             <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
           </div>
-          <div class = "row d-flex justify-content-center text-center text-highlight">
+          <div class = "row d-flex justify-content-center text-center">
             <p><b>Role:</b> UX Designer and Researcher<br>
-            <b>Tools:</b> Adobe Illustrator and Adobe XD</p>
+            <b>Tools:</b> Adobe Illustrator and Adobe XD<br>
+            <b>Timeframe:</b> Sep. 2018 - Dec. 2018</p>
           </div>
         </div>
       </div>
