--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -67,9 +67,10 @@
           <div class = "row d-flex justify-content-center text-center">
             <p>A group project to inspire local engagement with the Great Lakes Region.</p>
           </div>
-          <div class = "row d-flex justify-content-center text-center text-highlight">
+          <div class = "row d-flex justify-content-center text-center">
             <p><b>Role:</b> Product Designer<br>
-            <b>Techniques:</b> Brainstorming, Iterative Prototyping</p>
+            <b>Techniques:</b> Brainstorming, Iterative Prototyping<br>
+            <b>Timeframe:</b> 4-hour Workshop</p>
           </div>
         </div>
       </div>
