--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -67,9 +67,10 @@
           <div class = "row d-flex justify-content-center text-center">
             <p>A group project focused on user research and qualitative data analysis.</p>
           </div>
-          <div class = "row d-flex justify-content-center text-center text-highlight">
+          <div class = "row d-flex justify-content-center text-center">
             <p><b>Role:</b> Experience Researcher, Customer Liaison<br>
-            <b>Tools:</b> Contextual Inquiry</p>
+            <b>Tools:</b> Contextual Inquiry<br>
+            <b>Timeframe:</b> Sep. 2018 - Dec. 2018</p>
           </div>
         </div>
       </div>
