--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -67,9 +67,10 @@
           <div class = "row d-flex justify-content-center text-center">
             <p>A solo project to practice some basic data visualization techniques.</p>
           </div>
-          <div class = "row d-flex justify-content-center text-center text-highlight">
+          <div class = "row d-flex justify-content-center text-center">
             <p><b>Role:</b> Data Visualization Analyst<br>
-            <b>Tools:</b> R, RStudio, Adobe Illustrator, Adobe After Effects</p>
+            <b>Tools:</b> R, RStudio, Adobe Illustrator, Adobe After Effects<br>
+            <b>Timeframe:</b> Oct. 2018 - Dec. 2018</p>
           </div>
         </div>
       </div>
