--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -58,7 +58,7 @@
     </nav>
 
     <main role="main">
-
+      <div style="position: relative; height: 57.5px"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
         <div class = "container">
           <div class = "row d-flex justify-content-center">
