Added tiny bit of 622 content

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -74,6 +74,24 @@
           </div>
         </div>
       </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h4 class="project-section-header" id="placeHolder">QUICK SUMMARY</h4>
+          </div>
+        </div>
+        <div class="project-page-card">
+          <div class="row">
+            <div class="col-sm-6">
+              Some preliminary content about the project.
+            </div>
+            <div class="col-sm-6">
+              <img src="../assets/Autodesk Consulting/Revit Logo square.jpg" style="width: 100%">
+            </div>
+          </div>
+        </div>
+
     </main>
 
     <footer>
