--- a/projects/Exercise_Visualizations.html
+++ b/projects/Exercise_Visualizations.html
@@ -89,7 +89,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="benchProgrss">Benching Progress</h4>
+          <h4 class="project-section-header" id="benchProgrss">BENCHING PROGRESS</h4>
         </div>
       </div>
       <div class="project-page-card">
@@ -111,7 +111,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <h4 class="project-section-header" id="sankeyDiagram">Sankey Diagrams</h4>
+          <h4 class="project-section-header" id="sankeyDiagram">SANKEY DIAGRAMS</h4>
         </div>
       </div>
       <div class="project-page-card">
