--- a/About.html
+++ b/About.html
@@ -60,9 +60,9 @@
       <div class = "container" style = "margin-top:100px">
         <div class = "row">
           <div class = "col-sm-6">
-            <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world. I’m currently working on my master’s in UX Research and Design at the University of Michigan and searching for internships.</p>
+            <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world. I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships.</p>
 
-            <p>Data visualization is what fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to users.</p>
+            <p>Data visualization fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful" target="_blank">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine my technical background with the design principles I’m learning now to find new and better ways to present complicated data to people.</p>
 
             <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drumset.</p>
 
