Adding a simple page for the start of 622 project

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <img src = "assets/Thumbnails/3DE grey-8.png" alt = "3D Emergency" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
-                  <p class="project-type">UX Design</p>
+                  <p class="project-type">UX Design and Research</p>
                 </div>
               </a>
             </div>
@@ -107,6 +107,17 @@
                 <div class = "caption">
                   <p class="project-name">Consulting with the MSGC</p>
                   <p class="project-type">User Research</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class = "col-lg-4 col-md-6 col-sm-12">
+            <div class = "thumbnail project-card mx-auto">
+              <a href = "projects/Autodesk_Consulting.html">
+                <img src = "assets/Autodesk Consulting/Autodesk logo dark.jpg" alt = "Autodesk Consulting" class = "project-image">
+                <div class = "caption">
+                  <p class="project-name">Consulting with Autodesk</p>
+                  <p class="project-type">User Research and Usability Testing</p>
                 </div>
               </a>
             </div>
