--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -65,7 +65,7 @@
             <h3>Consulting with Autodesk</h3>
           </div>
           <div class = "row d-flex justify-content-center text-center">
-            <p>A group project focused on user research, needs assessment, and usability testing.</p>
+            <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
           </div>
           <div class = "row d-flex justify-content-center text-center">
             <p><b>Role:</b> UX Researcher and Usability Tester<br>
@@ -78,16 +78,19 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="project-section-header" id="placeHolder">QUICK SUMMARY</h4>
+            <h4 class="project-section-header" id="placeHolder">PROJECT SUMMARY</h4>
           </div>
         </div>
         <div class="project-page-card">
           <div class="row">
             <div class="col-sm-6">
-              Some preliminary content about the project.
+              <p>My team, Corzetti Labs, and I have partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They are interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
+              <p>The key user groups they're interested in are new users to Revit who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
+              <p>Over the new few weeks our team will be completing a competitive analysis and conducting interviews with Autodesk's intended user groups. We'll follow that up with a hueristic evaluation and usability tests, and synthesize our results in a final video presentation for the Autodesk team.</p>
+              <p>Stay tuned for updates from the Corzetti team!</p>
             </div>
             <div class="col-sm-6">
-              <img src="../assets/Autodesk Consulting/Revit Logo square.jpg" style="width: 100%">
+              <img src="../assets/Autodesk Consulting/Autodesk logo dark original.jpg" class="img-fluid">
             </div>
           </div>
         </div>
