Changes to GLL copy

--- a/projects/Great_Lakes_Legends.html
+++ b/projects/Great_Lakes_Legends.html
@@ -128,7 +128,7 @@
           </div>
           <div class="col-lg-4 col-sm-12">
             <p>
-              We clumped all our ideas into groups, and then voted to pick one “how might we” question to move forward with. We decided on “How might we make the information interactive?”. Then we were given five more minutes to generate as many ideas as we could to answer that question. Our group created the most ideas (50!), and then casted votes again to decide which was best. The winning idea was to create a tool to let people tell their own stories about the Great Lakes region.
+              We clumped all our ideas into groups, and then voted to pick one “how might we” question to move forward with. We decided on “How might we make the information interactive?”. Then we were given five more minutes to generate as many ideas as we could to answer that question. I created eight of our group's 50 ideas, and then we cast votes again to decide which was best. The winning idea was to create a tool to let people tell their own stories about the Great Lakes region.
             </p>
           </div>
           <div class="col-lg-4 col-sm-6 col-xs-12">
@@ -139,7 +139,7 @@
           </div>
           <div class="col-sm-12">
             <p>
-              Then we had 15 minutes for our first round of prototyping. Our idea started to come together through a few rough sketches we collaborated on. After we had a few wireframes created the stakeholders dropped by our table to give some feedback and we walked them through what we had so far. We were given another 15 minutes to incorporate their feedback and improve the design. After we chatted about the changes we should make and how the final prototype should function two of us started creating the final color wireframes, another constructed some props for our demo, and I drafted up a logo for our design.
+              Then we had 15 minutes for our first round of prototyping. Our idea started to come together through a few rough sketches we collaborated on. After we had a few wireframes created the stakeholders dropped by our table to give some feedback and I walked them through what we had so far. We were given another 15 minutes to incorporate their feedback and improve the design. After we chatted about the changes we should make and how the final prototype should function two of us started creating the final color wireframes, another constructed some props for our demo, and I drafted up a logo for our design.
             </p>
           </div>
           <div class="col-lg-6 col-sm-12">
@@ -163,7 +163,7 @@
               Our team’s goal for approaching this challenge was to find a way to make the Library’s information interactive, and, most importantly, allow people to tell their own stories. We wanted to get people outside to experience the library, and we thought AR tech could help.
             </p>
             <p>
-              We combined an earlier idea, AR guided tours, with our storytelling idea, and started designing something to attach stories to places in the real world. These stories could be text, pictures, audio, or video, and could be created by the Library or regular users. Users can reply to their stories with their own additions, and leave them behind for others to see later.
+              We combined an earlier idea, AR guided tours, with our storytelling idea, and started designing something to attach stories to places in the real world. These stories could be text, pictures, audio, or video, and could be created by the Library or regular users. I suggested letting users reply to those stories for others to see later so they could create a multimedia thread of shared experiences.
             </p>
             <p>
               The app could show users where nearby stories are, as well as notify them if they’re approaching one. A “badge” system could be used to encourage users to travel to all the areas of the Great Lakes region, and the Library could create tours to help users view all their curated content in a local area.
