Updating copy in about and MSGC pages

--- a/About.html
+++ b/About.html
@@ -60,11 +60,15 @@
       <div class = "container" style = "margin-top:100px">
         <div class = "row">
           <div class = "col-sm-6">
-            <p>I’m a designer who cares about the environment, privacy, and which book to read next. I believe UX design is a way I can have fun and also make a positive impact on the world. I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships.</p>
+            <p>I’m a designer who cares about the environment, privacy, and which book to read next. I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships. I believe UX design is a way I can satisfy my desire to create beautiful things, make a positive impact on the world, and build experiences that bring people joy.</p>
 
             <p>Data visualization fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful" target="_blank">r/dataisbeautiful</a> when I’m procrastinating. I’m hoping to combine the design principles I’m learning with my technical background to find innovative ways to present complicated data to people.</p>
 
             <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drumset.</p>
+
+            <!--- Goodreads Widget --->
+              <span style="color: #382110">Check out what I've been reading lately here! </span><a href="https://www.goodreads.com/review/list/68005944?shelf=read" title="Jackson's book recommendations, liked quotes, book clubs, book trivia, book lists (read shelf)", rel="nofollow"><img border="0" alt="Jackson's book recommendations, liked quotes, book clubs, book trivia, book lists (read shelf)" src="https://www.goodreads.com/images/badge/badge1.jpg"></a>
+            <!--- --->
 
           </div>
           <div class = "col-sm-6">
