--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -101,7 +101,7 @@
               <br>
               Our project group partnered with them to create recommendations to improve the program. MSGC leadership included a mention of our project team in their recent report to NASA, and is eagerly waiting to hear our proposals and report them to NASA as well.
               <br>
-              So far we've interviewed many people involved with the application process, including faculty mentors at Michigan universities, campus MSGC representatives, and student award winners from the University of Michigan.
+              The guiding principle for our research was contextual inquiry, and we gathered data through interviews and field observations. Our group interviewed many people involved with the application process, including faculty mentors at Michigan universities, campus MSGC representatives, and student award winners from the University of Michigan. I led interviews with a UM PhD candidate, as well as a UM faculty member.
             </p>
           </div>
         </div>
@@ -147,7 +147,7 @@
       <div class="project-page-card">
         <div class="row">
           <div class="col-sm-12">
-            <p>We wrote up a final report summarizing our methods and findings from the semester. Due to confidentiality concerns details of our recommendations for their stated problem can't but included here, but please reach out if you'd like to learn more about the details of our analysis.</p>
+            <p>We wrote up a final report summarizing our methods and findings from the semester. I took responsibility for explaining our research methods and why we chose them, both to support our recommendations to the MSGC's stakeholders and to provide the stakeholders a leg to stand on if they needed to ask for more resources to implement our recommendations. Due to confidentiality concerns details of our recommendations for their stated problem can't but included here, but please reach out if you'd like to learn more about the details of our analysis.</p>
           </div>
         </div>
       </div>
