Adding css for image galleries

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -180,18 +180,24 @@
               <p>I started brainstorming about two approaches for reducing 911 call processing time. On one hand were solutions to help operators, and on the other were solutions to help callers. Then I turned those ideas into some storyboards.</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-4">
-              <img src="../assets/3D Emergency/Storyboard 1.jpg" style="width:100%; margin-bottom:5px">
-              <img src="../assets/3D Emergency/Storyboard 2.jpg" style="width:100%">
+          <div class="gallery-three-column">
+            <div class="mb-3">
+              <img src="../assets/3D Emergency/Storyboard 1.jpg" class="img-fluid">
             </div>
-            <div class="col-lg-4">
-              <img src="../assets/3D Emergency/Storyboard 3.jpg" style="width:100%; margin-bottom:5px">
-              <img src="../assets/3D Emergency/Storyboard 4.jpg" style="width:100%">
+            <div class="mb-3">
+              <img src="../assets/3D Emergency/Storyboard 2.jpg" class="img-fluid">
             </div>
-            <div class="col-lg-4">
-              <img src="../assets/3D Emergency/Storyboard 5.jpg" style="width:100%; margin-bottom:5px">
-              <img src="../assets/3D Emergency/Storyboard 6.jpg" style="width:100%">
+            <div class="mb-3">
+              <img src="../assets/3D Emergency/Storyboard 3.jpg" class="img-fluid">
+            </div>
+            <div class="mb-3">
+              <img src="../assets/3D Emergency/Storyboard 4.jpg" class="img-fluid">
+            </div>
+            <div class="mb-3">
+              <img src="../assets/3D Emergency/Storyboard 5.jpg" class="img-fluid">
+            </div>
+            <div class="mb-3">
+              <img src="../assets/3D Emergency/Storyboard 6.jpg" class="img-fluid">
             </div>
           </div>
 
