--- a/projects/MSGC_Consulting.html
+++ b/projects/MSGC_Consulting.html
@@ -119,21 +119,18 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-sm-12">
-            <img src="../assets/MSGC Consulting/Creating 1.jpg" style="width:100%; height:auto">
+        <div class="gallery-two-column">
+          <div class="mb-3">
+            <img src="../assets/MSGC Consulting/Creating 1.jpg" class="img-fluid">
           </div>
-          <div class="col-lg-4 col-sm-12">
-            <img src="../assets/MSGC Consulting/Creating 2.jpg" style="width:100%; height:auto">
+          <div class="mb-3">
+            <img src="../assets/MSGC Consulting/Creating 2.jpg" class="img-fluid">
           </div>
-          <div class="col-lg-4 col-sm-12">
-            <img src="../assets/MSGC Consulting/Creating 3.jpg" style="width:100%; height:auto">
+          <div class="mb-3">
+            <img src="../assets/MSGC Consulting/Creating 3.jpg" class="img-fluid">
           </div>
-          <div class="col-lg-4 col-sm-12">
-            <img src="../assets/MSGC Consulting/Creating 4.jpg" style="width:100%; height:auto">
-          </div>
-          <div class="col-lg-4 col-sm-12">
-            <img src="../assets/MSGC Consulting/Creating 5.jpg" style="width:100%; height:auto">
+          <div class="mb-3">
+            <img src="../assets/MSGC Consulting/Creating 5.jpg" class="img-fluid">
           </div>
         </div>
 
