--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 
     <link rel = "stylesheet" type = "text/css" href = "main.css">
-    <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:500|Roboto:300,500" rel="stylesheet"> 
 
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
