--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class = "col-lg-4 col-md-6 col-sm-12 ">
             <div class = "thumbnail project-card mx-auto">
               <a href = "projects/3D_Emergency.html">
-                <img src = "assets/Thumbnails/3DE grey-8.png" alt = "3D Emergency" class = "project-image">
+                <img src = "assets/Thumbnails/3DE cropped thumbnail.png" alt = "3D Emergency" class = "project-image">
                 <div class = "caption">
                   <p class="project-name">3D Emergency</p>
                   <p class="project-type">UX Design and Research</p>
