--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -77,6 +77,17 @@
 
 
       <!---Actual content about the project --->
+
+      <div class="container">
+        <div class="project-page-card">
+          <div class = "row">
+            <div class="col-lg-12">
+              <img src="../assets/3D Emergency/mobile screen mockup collage.png" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="sticky-project-nav">
         <table class="project-section-navigation">
           <tr>
@@ -91,23 +102,6 @@
 
       <div class="container">
 
-        <div class="project-page-card">
-          <div class = "row">
-            <div class="col-lg-3 col-sm-6">
-              <img src="../assets/3D Emergency/Pre Scan with Outline.png" style="width:100%">
-            </div>
-            <div class="col-lg-3 col-sm-6">
-              <img src="../assets/3D Emergency/QR Code with Outline.png" style="width:100%">
-            </div>
-            <div class="col-lg-3 col-sm-6">
-              <img src="../assets/3D Emergency/Room Info with Outline.png" style="width:100%">
-            </div>
-            <div class="col-lg-3 col-sm-6">
-              <img src="../assets/3D Emergency/Post Scan with Outline.png" style="width:100%">
-            </div>
-          </div>
-        </div>
-
         <div class="row">
           <div class="col-sm-12">
             <h4 class="project-section-header" id="quickSummary">QUICK SUMMARY</h4>
@@ -115,13 +109,16 @@
         </div>
         <div class="project-page-card">
           <div class = "row">
-            <div class="col-sm-12">
+            <div class="col-lg-6 col-sm-12">
               <h5>Inspiration</h5>
               <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
               <h5>Design Goal</h5>
               <p>After speaking with 911 dispatchers I learned that GPS coordinates from smartphones are being incorporated into the 911 call process, but they're not a panacea. This project was an attempt to design a new tool that can be used when dialing 9-1-1 in the United States that would help decrease the time it takes to locate a caller.</p>
               <h5>Outcome</h5>
               <p>I re-imagined the interaction between 911 callers and dispatchers when callers need to describe their specific location within a building. I did this by adding a new tool to caller's physical environments, QR codes, and designed a solution to integrate them with the current process of calling 911. I created prototypes to model how the new interactions would happen on both a caller's smartphone and the monitors in front of 911 dispatchers.</p>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <img src="../assets/3D Emergency/QR code poster mock up.png" class="img-fluid">
             </div>
           </div>
         </div>
