Final round of hero text edits for now

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
     <main role="main">
       <div class = "jumbotron jumbotron-fluid d-flex align-items-center" id = "mainJumbotron">
         <div class = "container">
-          <h3 id='heroTextFirst'><a href="About.html" style="color: #313131;">Hi there! I'm Jackson.</a></h3>
-          <h5 id='heroTextThird'>Digital product designer, drummer, and data visualizer.</h5>
+          <div class="col-sm-12" >
+            <h1> <span style="color: #BDBDBD;">Hi there!</span></h1>
+            <h1><a href="About.html" style="color: #313131;">I'm Jackson.</a></h1>
+            <p><span style="color: #673AB7; font-weight: 500;">Digital product designer</span> from Ann Arbor. <br>I want to create better experiences <span style="color: #673AB7; font-weight: 500;">for people.</span></p>
+          </div>
         </div>
       </div>
 
