Starting on the 10-col grid setup

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -61,16 +61,16 @@
       <div style="position: relative; height: 57.5px"></div>
       <div class="jumbotron project-jumbotron d-flex align-items-center">
         <div class = "container">
-          <div class = "row d-flex justify-content-center">
-            <h3>3D Emergency</h3>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
-          </div>
-          <div class = "row d-flex justify-content-center text-center">
-            <p><b>Role:</b> UX Designer and Researcher<br>
-            <b>Tools:</b> Adobe Illustrator and Adobe XD<br>
-            <b>Timeframe:</b> Sep. 2018 - Dec. 2018</p>
+          <div class="row justify-content-center">
+            <div class="col-sm-10 col-center">
+              <h1>3D Emergency</h1>
+              <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
+              <p>
+                <span style="color: #673AB7; font-weight: 500;">Role:</span> UX Designer and Researcher<br>
+                <span style="color: #673AB7; font-weight: 500;">Tools:</span> Adobe Illustrator and Adobe XD<br>
+                <span style="color: #673AB7; font-weight: 500;">Timeframe:</span> Sep. 2018 - Dec. 2018
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -102,14 +102,14 @@
 
       <div class="container">
 
-        <div class="row">
-          <div class="col-sm-12">
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
             <h4 class="project-section-header" id="quickSummary">QUICK SUMMARY</h4>
           </div>
         </div>
         <div class="project-page-card">
-          <div class = "row">
-            <div class="col-lg-6 col-sm-12">
+          <div class = "row justify-content-center">
+            <div class="col-sm-10">
               <h5>Inspiration</h5>
               <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
               <h5>Design Goal</h5>
@@ -117,52 +117,49 @@
               <h5>Outcome</h5>
               <p>I re-imagined the interaction between 911 callers and dispatchers when callers need to describe their specific location within a building. I did this by adding a new tool to caller's physical environments, QR codes, and designed a solution to integrate them with the current process of calling 911. I created prototypes to model how the new interactions would happen on both a caller's smartphone and the monitors in front of 911 dispatchers.</p>
             </div>
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-sm-10">
               <img src="../assets/3D Emergency/QR code poster mock up.png" class="img-fluid">
             </div>
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-sm-12">
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
             <h4 class="project-section-header" id="newTools">THE NEW TOOLS</h4>
           </div>
         </div>
 
         <div class="project-page-card">
-          <div class="row">
-            <div class="col-sm-6">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-sm-5">
+              <img src="../assets/3D Emergency/QR Code Scan.gif" class="float-right" style="width:80%;">
+            </div>
+            <div class="col-sm-5">
               <h5>QR Code Integration</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-md-6">
-              <img src="../assets/3D Emergency/QR Code Scan.gif" style="width:75%">
-              <p>Scanning QR code mid-call</p>
-            </div>
-            <div class="col-lg-8 col-md-6">
               <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
             </div>
           </div>
 
-          <div class="row">
-            <div class="container">
-              <h5>Floorplan Visualization</h5>
+          <div class="row justify-content-center align-items-center">
+            <div class="col-sm-5">
+              <h5>Caller Floor Visualization</h5>
+              <p>Dispatchers, left, and callers, right, would be able to visualize their new location information, saving the dispatchers valuable time.</p>
+            </div>
+            <div class="col-sm-5">
+              <img src="../assets/3D Emergency/Phone View Map.gif" style="width:80%">
             </div>
           </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <img src="../assets/3D Emergency/Dispatch View Map.gif" style="width:100%">
-              </div>
-              <div class="col-sm-3">
-                <img src="../assets/3D Emergency/Phone View Map.gif" style="width:75%">
-              </div>
-              <div class="col-sm-3">
-                <p>Dispatchers, left, and callers, right, would be able to visualize their new location information, saving the dispatchers valuable time.</p>
-              </div>
+
+          <div class="row justify-content-center align-items-center">
+            <div class="col-md-10 col-sm-12">
+              <h5>QR Code Integration</h5>
+              <p>Callers would be able to use the camera built into their smartphone to scan emergency QR code posters that are in the room with them. The location information that's encoded in them would be pulled out and displayed for them to communicate to the 911 dispatcher they're speaking with.</p>
+            </div>
+            <div class="col-md-10 col-sm-12">
+              <img src="../assets/3D Emergency/Dispatch View Map.gif" class="float-right" style="width:100%;">
             </div>
           </div>
+
         </div>
 
         <div class="row">
